# RSpin

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
crates/rspin/: Cargo.toml
crates/rspin-analysis/: Cargo.toml
crates/rspin-analysis/src/: alignment.rs  assignments.rs  buckets.rs  clustering.rs  consensus.rs  couplings.rs  integration.rs  integration_2d.rs  lib.rs  matrix.rs  multiplets.rs  pairwise.rs  pca.rs  peak_optimization.rs  peaks.rs  ranges.rs  signals.rs  traits.rs  workflow.rs  zones.rs
crates/rspin-analysis/src/alignment/: tests.rs  two_d.rs
crates/rspin-analysis/src/assignments/: annotations.rs  ids.rs  tests.rs
crates/rspin-analysis/src/buckets/: tests.rs  two_d.rs
crates/rspin-analysis/src/clustering/: model.rs  tests.rs
crates/rspin-analysis/src/consensus/: model.rs  ranges.rs  tests.rs  zones.rs
crates/rspin-analysis/src/couplings/: tests.rs
crates/rspin-analysis/src/integration_2d/: tests.rs
crates/rspin-analysis/src/matrix/: tests.rs  two_d.rs
crates/rspin-analysis/src/multiplets/: tests.rs
crates/rspin-analysis/src/pairwise/: tests.rs
crates/rspin-analysis/src/pca/: model.rs  tests.rs
crates/rspin-analysis/src/peak_optimization/: tests.rs
crates/rspin-analysis/src/signals/: model.rs  tests.rs  two_d.rs
crates/rspin-analysis/src/workflow/: builder.rs  tests.rs
crates/rspin-analysis/src/zones/: tests.rs
crates/rspin-core/: Cargo.toml
crates/rspin-core/src/: chemistry.rs  error.rs  hypercomplex.rs  lib.rs  marks.rs  metadata.rs  nucleus.rs  spectrum.rs  units.rs
crates/rspin-core/src/chemistry/: tests.rs
crates/rspin-core/src/spectrum/: annotations.rs  tests.rs
crates/rspin-io/: Cargo.toml
crates/rspin-io/src/: agilent.rs  analysis_csv.rs  analysis_json.rs  assignment_json.rs  auto.rs  bruker.rs  bundle.rs  bundle_json.rs  csv.rs  csv_2d.rs  csv_common.rs  jcamp.rs  jeol.rs  json.rs  lib.rs  nmredata.rs  nmredata_json.rs  nmrml.rs  nmrml_2d.rs  nmrml_2d_writer.rs  nmrml_info.rs  nmrml_writer.rs  prediction_csv.rs  prediction_json.rs  processing_json.rs  simulation_csv.rs  simulation_json.rs  traits.rs
crates/rspin-io/src/agilent/: procpar.rs  tests.rs
crates/rspin-io/src/analysis_csv/: tests.rs
crates/rspin-io/src/analysis_json/: tests.rs
crates/rspin-io/src/assignment_json/: tests.rs
crates/rspin-io/src/auto/: bytes.rs  writer.rs
crates/rspin-io/src/bruker/: processed_2d.rs  raw.rs  tests.rs
crates/rspin-io/src/bundle/: exact.rs  loader.rs  model.rs  selectors.rs  source_format.rs
crates/rspin-io/src/csv_2d/: tests.rs
crates/rspin-io/src/jcamp/: asdf.rs  labels.rs  tests.rs  two_d.rs  writer.rs
crates/rspin-io/src/jeol/: binary.rs  data.rs  header.rs  parameters.rs  tests.rs
crates/rspin-io/src/nmredata/: analysis.rs  tests.rs  writer.rs
crates/rspin-io/src/nmredata_json/: tests.rs
crates/rspin-io/src/nmrml_2d/: tests.rs
crates/rspin-io/src/prediction_json/: tests.rs
crates/rspin-io/src/processing_json/: tests.rs
crates/rspin-io/src/simulation_json/: tests.rs
crates/rspin-io/testdata/: README.md
crates/rspin-io/testdata/bundle_nmredata/: ethanol.sdf
crates/rspin-io/testdata/dataverse/: README.md
crates/rspin-io/testdata/nmrml/: README.md
crates/rspin-io/testdata/nmrxiv/: README.md
crates/rspin-io/testdata/zenodo_7100132/: README.md
crates/rspin-io/tests/: bundle_json.rs  bundle_loader.rs  bundle_selectors.rs  dataverse_fixtures.rs  external_fixtures.rs  fixture_attribution.rs  nmrml_fixtures.rs  nmrxiv_fixtures.rs
crates/rspin-prediction/: Cargo.toml
crates/rspin-prediction/src/: lib.rs  model.rs  rules.rs  spectrum.rs  spectrum_2d.rs  traits.rs  workflow.rs
crates/rspin-prediction/src/model/: tests.rs
crates/rspin-prediction/src/rules/: correlations.rs  tests.rs
crates/rspin-prediction/src/spectrum/: tests.rs
crates/rspin-prediction/src/spectrum_2d/: tests.rs
crates/rspin-prediction/src/workflow/: tests.rs
crates/rspin-processing/: Cargo.toml
crates/rspin-processing/src/: abs_1d.rs  abs_2d.rs  apodization_2d.rs  auto_phase.rs  auto_phase_2d.rs  auto_processing.rs  baseline.rs  builder_tests.rs  contours.rs  crop_1d.rs  crop_2d.rs  hypercomplex_2d.rs  lib.rs  linear_prediction.rs  one_d.rs  pipeline.rs  pipeline_2d.rs  recipe_1d.rs  recipe_2d.rs  resample_1d.rs  resample_2d.rs  serde_tests.rs  traits.rs  transform.rs  transform_2d.rs  two_d.rs  zero_fill_2d.rs
crates/rspin-processing/src/apodization_2d/: tests.rs
crates/rspin-processing/src/auto_phase/: model.rs  regions.rs  tests.rs
crates/rspin-processing/src/auto_phase_2d/: model.rs  tests.rs
crates/rspin-processing/src/auto_processing/: tests.rs
crates/rspin-processing/src/baseline/: polynomial.rs  tests.rs  whittaker.rs
crates/rspin-processing/src/contours/: tests.rs
crates/rspin-processing/src/hypercomplex_2d/: tests.rs
crates/rspin-processing/src/linear_prediction/: tests.rs
crates/rspin-processing/src/pipeline_2d/: tests.rs
crates/rspin-processing/src/recipe_1d/: tests.rs
crates/rspin-processing/src/recipe_2d/: tests.rs
crates/rspin-processing/src/transform/: tests.rs
crates/rspin-processing/src/transform_2d/: tests.rs
crates/rspin-processing/src/two_d/: tests.rs
crates/rspin-processing/src/zero_fill_2d/: tests.rs
crates/rspin-simulation/: Cargo.toml
crates/rspin-simulation/src/: exact.rs  first_order.rs  lib.rs  line_shape.rs  traits.rs
crates/rspin-simulation/src/exact/: hamiltonian.rs  model.rs  spectrum.rs  spectrum_2d.rs  tests.rs  workflow.rs
crates/rspin-simulation/src/first_order/: tests.rs
crates/rspin-wasm/: Cargo.toml
crates/rspin-wasm/src/: analysis.rs  api.rs  contours.rs  io.rs  lib.rs  prediction.rs  processing_1d.rs  processing_2d.rs  simulation.rs  workflow.rs
crates/rspin-wasm/src/api/: assignments.rs  buckets.rs  clustering.rs  consensus.rs  contours.rs  csv_io.rs  (+9 more)
crates/rspin/src/: lib.rs  pipeline.rs  plot.rs  tests.rs  workflow.rs
crates/rspin/tests/: hsqc_phase_sensitive.rs  hypercomplex_hsqc.rs
examples/ruviz-processing/: Cargo.toml  deny.toml
examples/ruviz-processing/src/: main.rs
(+57 files in other folders)
