[workspace]
members = [
    "crates/rspin",
    "crates/rspin-analysis",
    "crates/rspin-core",
    "crates/rspin-io",
    "crates/rspin-prediction",
    "crates/rspin-processing",
    "crates/rspin-simulation",
    "crates/rspin-wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
rspin-analysis = { path = "crates/rspin-analysis", version = "0.1.0" }
rspin-core = { path = "crates/rspin-core", version = "0.1.0" }
rspin-io = { path = "crates/rspin-io", version = "0.1.0" }
rspin-prediction = { path = "crates/rspin-prediction", version = "0.1.0" }
rspin-processing = { path = "crates/rspin-processing", version = "0.1.0" }
rspin-simulation = { path = "crates/rspin-simulation", version = "0.1.0" }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

