[package]
name = "rspin-io"
description = "Spectrum IO for RSpin."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rspin-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
