[package]
name = "rspin-io"
description = "Spectrum IO for RSpin."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rspin-analysis.workspace = true
rspin-core.workspace = true
rspin-processing.workspace = true
serde_json.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
