[package]
name = "rspin-io"
description = "Spectrum IO for RSpin."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
flate2.workspace = true
quick-xml.workspace = true
rspin-analysis.workspace = true
rspin-core.workspace = true
rspin-prediction.workspace = true
rspin-processing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
