[package]
name = "rspin-processing"
description = "Signal processing operations for RSpin."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rspin-core.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
