[package]
name = "rspin-processing"
description = "Signal processing operations for RSpin."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
external-baselines = ["dep:baselines"]

[dependencies]
baselines = { workspace = true, optional = true }
nalgebra.workspace = true
rspin-core.workspace = true
rustfft.workspace = true
serde.workspace = true

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true

[lints]
workspace = true
