[package]
name = "rspin-simulation"
description = "Spectrum simulation for RSpin."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
first-order = []

[dependencies]
nalgebra.workspace = true
rspin-core.workspace = true
serde.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
